--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "dayjs": "^1.11.11",
     "ioredis": "^5.4.1",
+    "marked": "^12.0.2",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sanitize-html": "^2.13.0"
   },
   "devDependencies": {
     "eslint": "^8",
