--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.11.11",
     "ioredis": "^5.4.1",
     "marked": "^12.0.2",
+    "mime": "^4.0.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
